--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="left">
         </div>
         <div class="right">
-            <div class="login">  <a href="https://www.cnrmall.com/login">您好，请登录</a> <a href="https://www.cnrmall.com/register" class="c-danger">免费注册</a>  </div>
+            <div class="login">  <a href="#" class="login_session">您好，请登录</a> <a href="https://www.cnrmall.com/register" class="c-danger">免费注册</a>  </div>
             <div class="new-home" style="float:right; height:39px;line-height:39px;">
                 <i><img src="https://pic1.cnrmall.com/picself/home/on2.png" alt="" style="margin-right:2px"></i>
                 <a href="http://scm.cnrmall.com/veninfo/venlogin/index.jsp" target="_blank" style="font-size: 12px; font-family: 宋体; color:#777;">成为供应商</a>
